--- a/HTML_Cheatsheet/index.html
+++ b/HTML_Cheatsheet/index.html
@@ -1,1 +1,67 @@
+<!DOCTYPE html>
+<html>
+    <!-- Created by S.L.Horley 06-11-2024 -->
+    <head>
+        <link rel="stylesheet" href="./style.css" type="text/css">
+    </head>
 
+    <body>
+        <h1>HTML/CSS Cheatsheet</h1>
+        <h2>Base HTML Template Tags</h2>
+        <p>All HTML pages require these basic tags to form the traditional 'web page':</p>
+        <table>
+            <thead>
+                <th>Tag</th>
+                <th>Name</th>
+                <th>Description</th>
+            </thead>
+            <tbody>                
+                <tr>
+                    <td><span class="tag">&lt;html&gt;</span></td>
+                    <td>HTML</td>
+                    <td>This tag begins and ends the file containing all of the page content within it.</td>
+                </tr>
+                <tr>
+                    <td><span class="tag">&lt;head&gt;</span></td>
+                    <td>HEAD</td>
+                    <td>Denotes the Head section of the page often contains CSS links and other references.</td>
+                </tr>
+                <tr>
+                    <td><span class="tag">&lt;body&gt;</span></td>
+                    <td>BODY</td>
+                    <td>Contains the main displayed content of the web page. This is the "meat" of your web page.</td>
+                </tr>
+            </tbody>
+        </table> 
+        
+        <h2>Closing HTML Tags</h2>
+        <p>All tags used within an HTML document must have a corresponding closing tag,
+           allowing the browser to accurately interpret the proper layout of the page content.</p>
+        <table>
+            <thead>
+                <th>Tag</th>
+                <th>Name</th>
+                <th>Description</th>
+            </thead>
+            <tbody>
+                <tr>
+                    <td><span class="tag">&lt;/html&gt;</span></td>
+                    <td>Closing HTML Tag</td>
+                    <td>This tag closes the HTML content and is typically the last element written on the file.</td>
+                </tr>
+                <tr>
+                    <td><span class="tag">&lt;/head&gt;</span></td>
+                    <td>Closing HEAD Tag</td>
+                    <td>Closes the Head section of the page.</td>
+                </tr>
+                <tr>
+                    <td><span class="tag">&lt;/body&gt;</span></td>
+                    <td>Closing BODY Tag</td>
+                    <td>Closes the main section "Body" of the web page.</td>
+                </tr>                
+            </tbody>            
+        </table>
+        <h3>NOTE: We have not included the &lt;!DOCTYPE&gt; in these tables as it is not a tag/element. It is only an instruction to the browser
+            about what the document type is. It is considered a Null Element and has no closing tag as it cannot contain any content. </h3>
+    </body>
+</html>
